Nutch Change Log

Release 2.0 - Current Development

* NUTCH-716 Make subcollection index filed multivalued (Dmitry Lihachev via jnioche)

* NUTCH-884 FetcherJob should run more reduce tasks than default (ab)

* NUTCH-883 Remove unused parameters from nutch-default.xml (jnioche)

* NUTCH-886 A .gitignore file for Nutch (dogacan)

* NUTCH-872 Change the default fetcher.parse to FALSE (ab).

* NUTCH-861 Renamed HTMLParseFilter into ParseFilter 

* NUTCH-876 Remove remaining robots/IP blocking code in lib-http (ab)

* NUTCH-851 Port logging to slf4j (jnioche)

* NUTCH-564 External parser supports encoding attribute (Antony Bowesman, mattmann)

* NUTCH-873 Ivy configuration settings don't include Gora (mattmann)

* NUTCH-870 Injector should add the metadata before calling injectedScore (jnioche via mattmann)

* NUTCH-867 Port Nutch benchmark to Nutchbase (ab)

* NUTCH-869 Add parse-html back (jnioche)

* NUTCH-871 MoreIndexingFilter missing date format (Max	Lynch via mattmann)

* NUTCH-696 Timeout for Parser (ab, jnioche)

* NUTCH-774 Retry interval in crawl date is set to 0 (Reinhard Schwab via mattmann)

* NUTCH-697 Generate log output for solr indexer and dedup (Dmitry Lihachev, Jeroen van Vianen via mattmann)

* NUTCH-844 Improve NutchConfiguration (ab)

* NUTCH-850 SolrDeleteDuplicates needs to clone the SolrRecord objects (jnioche)

* NUTCH-845 Native hadoop libs not available through maven (ab)

* NUTCH-843 Separate the build and runtime environments (ab)

* NUTCH-821 Use ivy in nutch builds (Enis Soztutar, jnioche)

* NUTCH-838 Add timing information to all Tool classes (Jeroen van Vianen, mattmann)

* NUTCH-837 Remove search servers and Lucene dependencies (ab)

* NUTCH-836 Remove deprecated parse plugins (jnioche)

* NUTCH-835 Document deduplication failed using MD5Signature (Sebastian Nagel via ab)

* NUTCH-278 Fetcher-status might need clarification: kbit/s instead of kb/s shown (Alex McLintock via mattmann)
