@@ -2,6 +2,8 @@ Nutch Change Log
 
 Release 2.0 - Current Development
 
+* NUTCH-905 Configurable file protocol parent directory crawling (Thorsten Scherler, mattmann, ab)
+
 * NUTCH-716 Make subcollection index filed multivalued (Dmitry Lihachev via jnioche)
 
 * NUTCH-884 FetcherJob should run more reduce tasks than default (ab)
